old removes
i have an old version of java :'(
i cant remove first so i need to remove via
index like a casual plebian